Added infos to README, fixed some warnings in code Implemented fields centering on the most recently placed card in GUI and visualization of turns left until the game ends when in final phase